--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -324,21 +324,10 @@
 }
 
 @InProceedings{rec:virt,
-  Title                    = {{Recursive virtual machines for advanced security mechanisms}},
+  Title                    = {{Recursive Virtual Machines for Advanced Security Mechanisms}},
   Author                   = {Kauer, Bernhard and Verissimo, Paulo and Bessani, Alysson},
-  Booktitle                = {{Proceedings of the 2011 IEEE/IFIP 41st International Conference on Dependable Systems and Networks Workshops}},
+  Booktitle                = {{IEEE/IFIP International Conference on Dependable Systems and Networks (DSN) Workshops}},
   Year                     = {2011},
-
-  Address                  = {Washington, DC, USA},
-  Pages                    = {117--122},
-  Publisher                = {IEEE Computer Society},
-  Series                   = {{DSNW '11}},
-
-  Acmid                    = {2057137},
-  Doi                      = {10.1109/DSNW.2011.5958796},
-  ISBN                     = {978-1-4577-0374-4},
-  Numpages                 = {6},
-  Url                      = {http://dx.doi.org/10.1109/DSNW.2011.5958796}
 }
 
 @InProceedings{Klein:2009,
@@ -460,25 +449,14 @@
 }
 
 @Article{Popek:1974:FRV:361011.361073,
-  Title                    = {{Formal requirements for virtualizable third generation architectures}},
+  Title                    = {{Formal Requirements for Virtualizable Third Generation Architectures}},
   Author                   = {Popek, Gerald J. and Goldberg, Robert P.},
-  Journal                  = {Commun. ACM},
+  Journal                  = {{Commun. ACM}},
   Year                     = {1974},
-
   Month                    = jul,
   Number                   = {7},
   Pages                    = {412--421},
   Volume                   = {17},
-
-  Acmid                    = {361073},
-  Address                  = {New York, NY, USA},
-  Doi                      = {10.1145/361011.361073},
-  ISSN                     = {0001-0782},
-  Issue_date               = {July 1974},
-  Keywords                 = {abstract model; formal requirements; hypervisor; operating system; proof; sensitive instruction; third generation architecture; virtual machine; virtual machine monitor; virtual memory},
-  Numpages                 = {10},
-  Publisher                = {ACM},
-  Url                      = {http://doi.acm.org/10.1145/361011.361073}
 }
 
 @Misc{genode,
